--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,8 @@
                             <td>
                                 <div class="action-buttons">
                                     <a href="/update/{{ offre.id }}" class="btn btn-warning btn-sm">Update</a>
-                                    <a href="javascript:void(0);" onclick="deleteOffer(event, '{{ offre.id }}', this)" class="btn btn-danger btn-sm">Delete</a>                                </div>
+                                    <a href="javascript:void(0);" onclick="deleteOffer(event, '{{ offre.id }}', this)"
+                                       class="btn btn-danger btn-sm">Delete</a></div>
                             </td>
                         </tr>
                     {% endfor %}
@@ -126,33 +127,33 @@
             </form>
         {% endif %}
         <a href="/add-offre" class="btn btn-secondary">Add Offre d'Emploi</a>
-        <a href="/delete-index" class="btn btn-danger">Delete Index</a>
+        <!-- <a href="/delete-index" class="btn btn-danger">Delete Index</a> -->
     </div>
 {% endblock %}
 <script>
-function deleteOffer(event, offerId, element) {
-    event.stopPropagation(); // Stop the event from propagating to the row click event
-    if (confirm("Are you sure you want to delete this offer?")) {
-        fetch(`/delete/${offerId}`, {
-            method: 'POST'
-        })
-        .then(response => {
-            if (response.ok) {
-                // Use the 'element' parameter to find the closest row and remove it
-                const row = element.closest('tr');
-                if (row) {
-                    row.parentNode.removeChild(row);
-                }
-            } else {
-                alert("Error deleting offer.");
-            }
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            alert("Error deleting offer.");
-        });
+    function deleteOffer(event, offerId, element) {
+        event.stopPropagation(); // Stop the event from propagating to the row click event
+        if (confirm("Are you sure you want to delete this offer?")) {
+            fetch(`/delete/${offerId}`, {
+                method: 'POST'
+            })
+                .then(response => {
+                    if (response.ok) {
+                        // Use the 'element' parameter to find the closest row and remove it
+                        const row = element.closest('tr');
+                        if (row) {
+                            row.parentNode.removeChild(row);
+                        }
+                    } else {
+                        alert("Error deleting offer.");
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert("Error deleting offer.");
+                });
+        }
     }
-}
 
 </script>
 </body>
